# swagger.yml
@@ -78,7 +78,7 @@ components:
       properties:
         id:
           type: "number"
-          example: 635
+          example: 298
         name:
           type: "string"
           example: "John Doe"
@@ -100,7 +100,7 @@ components:
       properties:
         id:
           type: "number"
-          example: 666
+          example: 504
         name:
           type: "string"
           example: "John Doe"
@@ -140,13 +140,13 @@ components:
       properties:
         id:
           type: "number"
-          example: 186
+          example: 254
         route_id:
           type: "number"
-          example: 438
+          example: 791
         stop_id:
           type: "number"
-          example: 752
+          example: 65
         route:
           $ref: "#/components/schemas/Route"
           example: null
@@ -165,10 +165,13 @@ components:
       properties:
         id:
           type: "number"
-          example: 420
+          example: 999
         time:
           type: "string"
           example: "Lorem Ipsum"
+        sequence:
+          type: "number"
+          example: 233
         destination:
           type: "string"
           example: "Lorem Ipsum"
@@ -179,10 +182,10 @@ components:
             example: null
         route_stop_id:
           type: "number"
-          example: 856
+          example: 831
         run:
           type: "number"
-          example: 121
+          example: 640
         route_stop:
           $ref: "#/components/schemas/RouteStop"
           example: null
@@ -201,7 +204,7 @@ components:
       properties:
         id:
           type: "number"
-          example: 233
+          example: 675
         name:
           type: "string"
           example: "John Doe"
@@ -236,17 +239,17 @@ components:
       properties:
         id:
           type: "number"
-          example: 584
+          example: 665
         created_at:
           type: "string"
           example: "2021-03-23T16:13:08.489+01:00"
           format: "date-time"
         route_id:
           type: "number"
-          example: 756
+          example: 35
         run:
           type: "number"
-          example: 541
+          example: 645
         location:
           $ref: "#/components/schemas/GeoJSONPoint"
           example: null
@@ -283,13 +286,13 @@ components:
           required: true
         radius:
           type: "number"
-          example: 918
+          example: 18
       example:
         fromLatitude: -90
         fromLongitude: -180
         toLatitude: -90
         toLongitude: -180
-        radius: 918
+        radius: 18
       description: "findRouteValidator (Validator)"
     nearbyRouteValidator:
       type: "object"
@@ -308,11 +311,11 @@ components:
           required: true
         radius:
           type: "number"
-          example: 261
+          example: 38
       example:
         latitude: -90
         longitude: -180
-        radius: 261
+        radius: 38
       description: "nearbyRouteValidator (Validator)"
     storeTrackingValidator:
       type: "object"
@@ -396,31 +399,88 @@ paths:
                 items:
                   type: "object"
               example:
-                - id: 1
-                  name: "PKS Krapkowice Gogolin"
-                  operator: "PKS w Strzelcach Op. S.A."
-                  departure_stop:
-                    id: 5
-                    name: "Krapkowice ul. Opolska I"
-                    time: "12:28:00"
-                    distance: 789
+                - departure:
+                    name: "KRAPKOWICE | Kaufland"
+                    id: 21
                     coordinates:
-                      longitude: 17.962
-                      latitude: 50.478
-                  arrival_stop:
-                    id: 14
-                    name: "Gogolin ul. Krapkowicka I"
-                    time: "12:47:00"
-                    distance: 929
-                    coordinates:
-                      longitude: 18.013
+                      longitude: 17.986
                       latitude: 50.489
-                  run: 3
-                  destination: "KRAPKOWICE OS. 1000L"
-                  travel_time: 19
-                  conditions:
-                    - name: "6x"
-                      description: "Kursuje w soboty powszednie oprócz Wielkiej Soboty"
+                    time: "17:58:00"
+                    distance: 978
+                  arrival:
+                    name: "OPOLE GŁÓWNE"
+                    id: 49
+                    coordinates:
+                      longitude: 17.925
+                      latitude: 50.662
+                    time: "18:47:00"
+                    distance: 0
+                  travel_time: 49
+                  transfers: 2
+                  routes:
+                    - id: 2
+                      name: "LUZ Krapkowice  Strzelce Opolskie"
+                      operator: "LUZ"
+                      type: "bus"
+                      run: 52
+                      departure:
+                        name: "KRAPKOWICE | Kaufland"
+                        id: 21
+                        coordinates:
+                          longitude: 17.986
+                          latitude: 50.489
+                        time: "18:10:00"
+                      arrival:
+                        name: "KRAPKOWICE | Osiedle 1000lecia"
+                        id: 18
+                        coordinates:
+                          longitude: 17.973
+                          latitude: 50.478
+                        time: "18:14:00"
+                      travel_time: 4
+                      destination: "KRAPKOWICE"
+                    - id: 2
+                      name: "LUZ Krapkowice  Strzelce Opolskie"
+                      operator: "LUZ"
+                      type: "bus"
+                      run: 42
+                      departure:
+                        name: "KRAPKOWICE | Osiedle 1000lecia"
+                        id: 18
+                        coordinates:
+                          longitude: 17.973
+                          latitude: 50.478
+                        time: "18:21:00"
+                      arrival:
+                        name: "GOGOLIN | Dworzec Kolejowy"
+                        id: 24
+                        coordinates:
+                          longitude: 18.024
+                          latitude: 50.491
+                        time: "18:31:00"
+                      travel_time: 10
+                      destination: "STRZELCE OPOLSKIE"
+                    - id: 3
+                      name: "POLREGIO KędzierzynKoźle  Opole Główne"
+                      operator: "POLREGIO"
+                      type: "train"
+                      run: 68
+                      departure:
+                        name: "GOGOLIN"
+                        id: 44
+                        coordinates:
+                          longitude: 18.025
+                          latitude: 50.49
+                        time: "18:35:00"
+                      arrival:
+                        name: "OPOLE GŁÓWNE"
+                        id: 49
+                        coordinates:
+                          longitude: 17.925
+                          latitude: 50.662
+                        time: "18:47:00"
+                      travel_time: 12
+                      destination: "OPOLE GŁÓWNE"
           description: "Returns **200** (OK) as **application/json**"
       security: []
   /api/v1/routes/{id}:
@@ -652,10 +712,10 @@ paths:
               schema:
                 $ref: "#/components/schemas/Track"
               example:
-                id: 584
+                id: 665
                 created_at: "2021-03-23T16:13:08.489+01:00"
-                route_id: 756
-                run: 541
+                route_id: 35
+                run: 645
           description: "Returns **200** (OK) as **application/json**"
       security: []
       requestBody:
